...
fun LoadingWidget(
    modifier: Modifier = Modifier,
    isCircular: Boolean = false
) {
    Card(
        modifier = modifier
            .testTag("loading_widget")
            .then(if (isCircular) Modifier.size(56.dp) else Modifier.padding(16.dp)),
        shape = if (isCircular) CircleShape else RoundedCornerShape(24.dp),
        elevation = CardDefaults.cardElevation(defaultElevation = 8.dp),
        colors = CardDefaults.cardColors(
            containerColor = MaterialTheme.colorScheme.surface
        )
...
