...
    modifier: Modifier = Modifier,
    buttonTextModifier: Modifier = Modifier,
    buttonImageModifier: Modifier = Modifier
) {
    Card(
        modifier = modifier
            .testTag("widget_button")
            .clickable { onClick() }
            .padding(16.dp),
        shape = RoundedCornerShape(24.dp),
        elevation = CardDefaults.cardElevation(defaultElevation = 8.dp),
        colors = CardDefaults.cardColors(
            containerColor = MaterialTheme.colorScheme.surface
...
